IP/Port set for GUI.
